src/test/borrowck/borrowck_argument.stderr
error: mismatched types
  --> $DIR/borrowck_argument.sq:7:12
   |
LL |     mutate(v);
   |            ^ expected `&mut i32`, found `i32`
   |

error: mismatched types
  --> $DIR/borrowck_argument.sq:13:12
   |
LL |     mutate(x);
   |            ^ expected `&mut i32`, found `&i32`
   |

