src/test/borrowck/borrowck_argument.sq
// ignore

fn mutate(v: &mut i32) {
    
}


fn foo(v: i32) {
    mutate(v);
}


fn main() {
    let x: &i32 = &10;
    mutate(x);
}
